# qrcam

./: .gitignore  Cargo.toml
src/: camera.rs  decode.rs  main.rs  qr.rs  ui.rs
