[package]
name = "qrcam"
version = "0.1.0"
edition = "2021"

[dependencies]
image = { version = "0.25.6", features = ["png"] }
av-foundation = "0.5"
x-media = "0.1.3"
core-media = "0.5"
core-video = "0.4"
core-foundation = "0.10"
objc2 = "0.5"
objc2-foundation = { version = "0.2", features = [
    "NSArray",
    "NSDictionary",
    "NSObject",
] }
dispatch2 = "0.1"
